Country tooltip alignment fixes

--- a/frontend/src/worldMap/app.css
+++ b/frontend/src/worldMap/app.css
@@ -16,14 +16,12 @@
 }
 
 .country-tooltip{
-    z-index: 99999999999;
     background: white;
     border-radius: 10px;
-    padding: 10px;
+    padding-top: 20px;
 
     width:150px;
     height:fit-content;
-
     text-align: center;
 
     border: 1px solid #22293C;
